<resources>
    <string name="app_name">NerdQuiz</string>
    <string name="no_user_name_default">NoUserName</string>
    <string name="user_name">username</string>
    <string name="version_dbquestions">version_dbquestions</string>
    <string name="profile_pic">profile_pic</string>
    <string name="default_profile_pic_name">picture.jpg</string>

    <!-- commands -->

    <string name="command_register">register</string>
    <string name="command_login">login</string>
    <string name="command_autologin">autologin</string>
    <string name="command_updatedb">updatedb</string>
    <string name="command_beinvited">beinvited</string>
    <string name="command_reject">reject</string>
    <string name="command_getppic">getppic</string>
    <string name="command_profilepdown">profilepdown</string>
    <string name="command_accept">accept</string>
    <string name="command_uppass">updatepass</string>
    <string name="command_profilepup">profilepup</string>
    <string name="command_next_quest">next_quest</string>
    <string name="command_game_start">game_start</string>
    <string name="command_other_ans">other_answered</string>
    <string name="command_new_game">new_game</string>
    <string name="command_receive_ques">receive_questions</string>
    <string name="command_search">search</string>
    <string name="command_invite">invite</string>
    <string name="command_joined">joined</string>
    <string name="command_leaved">leaved</string>

    <!-- reponses -->

    <string name="response_ok">OK</string>
    <string name="response_error">ERROR</string>
    <string name="response_registered">REGISTERED</string>
    <string name="response_not_regist">NOT_REGISTERED</string>

    <!-- -->

    <string name="type_new_search">new_search</string>

    <integer name="bytes_on_photo">8192</integer>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- -->
    <string name="wait_other_answer">Waiting opponet\'s answer ...</string>
    <string name="_invited"> invited!</string>
    <string name="_accepted_invitation"> accepted your invitation!</string>
    <string name="_rejected_invitation"> rejected your invitation!</string>
    <string name="invitation_request">Do you want to play with </string>
    <string name="invited">Invited</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_invited_yet">You haven\'t invited anyone yet!</string>
    <string name="search_player">Search Player</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Aren\'t you registered yet? Click here!</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="update">Update</string>
    <string name="player_name">Player Name</string>
    <string name="cancel">Cancel</string>
    <string name="snap_photo">Snap Photo</string>
    <string name="register">Register</string>
    <string name="already_registered">Are you registered already? Click here!</string>
    <string name="go_back">Go back</string>
    <string name="play_again">Play again</string>
    <string name="won">You won!</string>
    <string name="lose">You lose!</string>
    <string name="needs_username">Needs username!</string>
    <string name="needs_password">Needs password!</string>
    <string name="needs_image">Needs image!</string>
    <string name="logged_in">You are logged now!</string>
    <string name="not_registered_adv">You are not registered!</string>
    <string name="error_when_login">An error occurred while login!</string>
    <string name="questions_db_updated">Questions database updated!</string>
    <string name="passwords_are_different">Passwords are different!</string>
    <string name="updated">Updated!</string>
    <string name="error_occurred">An error occurred!</string>
    <string name="already_registered_adv">Already registered!</string>
    <string name="joined"> joined the game!</string>
    <string name="left"> left the game!</string>
    <string name="lost_connection">Probably you lost your internet connection!</string>
    <string name="server_not_found">Server not found</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnecting">Reconnecting...</string>

</resources>
