<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_autentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="a21240068.isec.nerdquiz.AuthenticationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/et_username"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:textAlignment="center"
            android:layout_marginTop="5sp" />

        <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:onClick="clickLoginButton"
            android:layout_marginTop="30dp" />

        <Button
            android:text="@string/not_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_not_registered"
            android:textAlignment="center"
            android:onClick="clickNotRegisteredText" />
    </LinearLayout>

</LinearLayout>
