<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="a21240068.isec.nerdquiz.EditProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iv_profile_pic"
        android:layout_weight="1"
        android:onClick="changeProfilePhoto"
        android:background="@drawable/change_profile_photo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_repeat_password"
        android:hint="@string/repeat_password"
        android:layout_marginTop="5dp" />

    <Button
        android:text="@string/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_update"
        android:onClick="updateData"
        android:layout_marginTop="5dp" />
</LinearLayout>
